# PyNative

./: .gitignore  CHANGELOG.md  Cargo.toml  PyNative_UI_Project_Blueprint.docx  README.md  pyproject.toml
android/experiment/: AndroidManifest.xml
android/experiment/src/com/pynative/experiment/: MainActivity.java  PyNativeBridge.java
crates/pynative_android_bridge/: Cargo.toml
crates/pynative_android_bridge/src/: lib.rs
crates/pynative_cli/: Cargo.toml
crates/pynative_cli/src/: main.rs
crates/pynative_core/: Cargo.toml
crates/pynative_core/src/: lib.rs
crates/pynative_platform_windows/: Cargo.toml
crates/pynative_platform_windows/src/: lib.rs
doc/: README.md
doc/developer/: README.md  declarative-api-and-cli.md  development-setup.md  enhancement-recommendations.md  mobile-compatibility-strategy.md  mvp-scope.md  platform-architecture.md  project-overview.md  project-status.md  risks-and-mitigation.md  roadmap.md
doc/developer/phases/: phase-00-research-and-prototype.md  phase-01-desktop-mvp.md  phase-02-android-mvp.md  phase-03-package-system.md  phase-04-ai-data-widgets.md  phase-05-backend-mode.md  phase-06-more-platforms.md  phase-07-advanced-renderer.md
doc/user/: README.md  android-experiment.md  design-and-style.md  first-counter-app.md  getting-started.md  packaging-and-distribution.md  project-configuration.md  python-package-compatibility.md
examples/: README.md
examples/calculator/: app.py
examples/contact_form/: app.py
examples/counter/: app.py
examples/dashboard/: app.py
examples/design_showcase/: app.py
examples/gallery/: app.py
examples/login/: app.py
examples/quiz/: app.py
examples/settings_panel/: app.py
examples/todo/: app.py
my_app/: README.md  app.py  pynative.toml
python/pynative/: __init__.py  android.py  app.py  cli.py  design.py  project.py  state.py  widgets.py
src/: lib.rs
tests/: test_cli.py  test_examples.py  test_widget_tree.py
tools/android/: build_experiment.ps1
