[package]
name = "pynative_platform_windows"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Windows platform shell experiments for PyNative UI"
publish = false

[dependencies]
pynative_core = { workspace = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
